--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,11 @@
   "dependencies": {
     "antd": "^5.24.6",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
+    "react-big-calendar": "^1.18.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0"
