--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "concurrently": "^9.1.2",
     "express-fileupload": "^1.5.1",
     "fs": "^0.0.1-security",
+    "jwt-decode": "^4.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
