--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "body-parser": "^2.2.0",
     "cloudinary": "^2.6.0",
     "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
     "express-fileupload": "^1.5.1",
     "express-rate-limit": "^7.5.0",
     "fs": "^0.0.1-security",
+    "helmet": "^8.1.0",
     "jwt-decode": "^4.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
