--- a/client/package.json
+++ b/client/package.json
@@ -12,18 +12,22 @@
     "start": "vite"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
     "antd": "^5.24.6",
     "axios": "^1.8.4",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.8",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "react": "^19.0.0",
+    "react": "^18.0.0",
     "react-big-calendar": "^1.18.0",
     "react-chartjs-2": "^5.3.0",
     "react-confirm-alert": "^3.0.6",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0"
@@ -31,8 +35,8 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tailwindcss/postcss": "^4.1.2",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^18.0.10",
+    "@types/react-dom": "^18.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.21.0",
@@ -41,6 +45,6 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.2",
-    "vite": "^6.2.0"
+    "vite": "^4.0.0"
   }
 }
