--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-tooltip": "^5.28.1",
     "recharts": "^2.15.3",
     "streamifier": "^0.1.1"
   }
