--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cloudinary": "^2.6.0",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "exceljs": "^4.4.0",
     "express-fileupload": "^1.5.1",
@@ -46,8 +47,11 @@
     "nodemailer": "^6.10.1",
     "npm": "^11.3.0",
     "pdf-lib": "^1.17.1",
+    "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-confirm-alert": "^3.0.6",
+    "react-datepicker": "^8.3.0",
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
