--- a/server/.env
+++ b/server/.env
@@ -8,5 +8,5 @@ CLOUDINARY_API_SECRET=D9RKXcvwahzEz5fR9D15zn2-8fI
 EMAIL_USER=dypualumni@gmail.com
 EMAIL_PASS=zslb nffp tque ugla
 REACT_APP_ADMIN_REGISTER_TOKEN=super-secret-admin-token
-
+ADMIN_EMAIL=dypualumni@gmail.com
 
